# stocvest

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml  vitest-full.txt  vitest-out.txt
design-prototypes/: dashboard-redesign.html
docs/: API_CONTRACTS.md  BACKLOG.md  CONTEXT.md  CURSOR_RULES.md  D1_SIGNAL_RESOLUTION_SCHEDULE.md  DASHBOARD_TERMINAL_UX_PLAN.md  DEPLOYMENT.md  FUNDAMENTALS_CONTEXT_SPEC.md  IMPLEMENTED.md  LAGGARD_AUDIT.md  LEDGER_DAILY_VERIFICATION.md  MEASUREMENT_SURFACES.md  OPPORTUNITY_DESK_AND_DASHBOARD_RADAR.md  PERFORMANCE.md  README.md  SETUP_ANALYTICS_SPEC.md  SIGNAL_ENGINE.md  SIGNAL_HISTORY_RETIREMENT.md  TUNING_PLAYBOOK.md  WATCHLIST_MATURATION_ARCH.md  WATCHLIST_PIPELINE_IMPLEMENTATION_PROMPT.md
frontend/: .env.example  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
infra/: README.md  alert_email_health.tf  apigateway_6e.tf  backend.hcl.example  cognito.tf  dynamodb.tf  ecs.tf  ecs_news_worker.tf  eventbridge.tf  eventbridge_scheduler_6g.tf  eventbridge_scheduler_laggard.tf  eventbridge_scheduler_news_event_study.tf  eventbridge_scheduler_trial.tf  eventbridge_signal_resolution.tf  lambda_6e.tf  lambda_runtime_secret.tf  lambda_weight_proposer.tf  lambda_weight_rotation_monitor.tf  main.tf  news_pipeline.tf  outputs.tf  redis.tf  s3.tf  s3_reports.tf  terraform.tfvars.example  validate.ps1  validate.sh  variables.tf  versions.tf
scripts/: analyze_signal_attribution.py  backfill_platform_backtest_mirror.py  backtest_environment_policy.py  backtest_macro_regime.py  beta_access.py  build_lambda_package.ps1  build_lambda_package.sh  build_push_news_worker.ps1  catchup_watchlist_maturation.py  check_polygon_economic_calendar.py  clear_sector_cache_misclassified.py  cognito_sub_for_email.py  dedupe_signal_history_shadow.py  dev_local_api.py  diagnose_day_feed_cards.py  diagnose_symbol_execution_actionable.py  grant_admin.py  init_signal_parameters.py  ledger_actionable_outcomes_report.py  ledger_signal_report.py  merge_upstash_external_api_keys.py  news_event_study_report.py  parse_dashboard_load_timing.ts  (+12 more)
(+1833 files in other folders)
