[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stocvest"
version = "0.1.0"
description = "Multi-broker swing + day trading signal platform"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",           # httpx mock library
    "anyio>=4.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stocvest*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast isolated tests (no network)",
    "integration: tests that hit real APIs",
]

[tool.ruff]
line-length = 100
target-version = "py311"
