[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "stocvest"
version = "0.1.0"
description = "Multi-broker swing + day trading signal platform"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "pandas>=2.2",
    # NumPy 2.4+ wheels can require GLIBC_2.27; Lambda Python 3.11 on Amazon Linux 2 does not ship it.
    "numpy>=1.26,<2",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",           # httpx mock library
    "anyio>=4.3",
    "PyJWT>=2.8",
    "pydantic-settings>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stocvest*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast isolated tests (no network)",
    "integration: tests that hit real APIs",
]

[tool.ruff]
line-length = 100
target-version = "py311"
